Upgrade to Spring Boot 4 + automatic refactoring