@@ -37,7 +37,6 @@ import java.io.File;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Map;
 
@@ -45,7 +44,7 @@ import static com.github._1c_syntax.bsl.languageserver.util.Assertions.assertTha
 
 @DirtiesContext
 class TimeoutsInExternalResourcesDiagnosticTest extends AbstractDiagnosticTest<TimeoutsInExternalResourcesDiagnostic> {
-  private static final File CONFIGURATION_FILE_PATH = Paths.get("./src/test/resources/metadata/designer/Configuration.xml").toFile();
+  private static final File CONFIGURATION_FILE_PATH = Path.of("./src/test/resources/metadata/designer/Configuration.xml").toFile();
   private Path tempDir;
 
   TimeoutsInExternalResourcesDiagnosticTest() {
@@ -94,8 +93,8 @@ class TimeoutsInExternalResourcesDiagnosticTest extends AbstractDiagnosticTest<T
   void testCompatibilityMode8310() {
 
     // when
-    Path testFile = Paths.get("./src/test/resources/diagnostics/TimeoutsInExternalResourcesDiagnostic.bsl").toAbsolutePath();
-    initServerContext(Paths.get("./src/test/resources/metadata/designer").toAbsolutePath());
+    Path testFile = Path.of("./src/test/resources/diagnostics/TimeoutsInExternalResourcesDiagnostic.bsl").toAbsolutePath();
+    initServerContext(Path.of("./src/test/resources/metadata/designer").toAbsolutePath());
     DocumentContext newDocumentContext = TestUtils.getDocumentContext(
       testFile.toUri(),
       FileUtils.readFileToString(testFile.toFile(), StandardCharsets.UTF_8),
@@ -133,12 +132,12 @@ class TimeoutsInExternalResourcesDiagnosticTest extends AbstractDiagnosticTest<T
 
     // when
     FileUtils.writeStringToFile(
-      Paths.get(tempDir.toAbsolutePath().toString(), "Configuration.xml").toFile(),
+      Path.of(tempDir.toAbsolutePath().toString(), "Configuration.xml").toFile(),
       FileUtils.readFileToString(CONFIGURATION_FILE_PATH, StandardCharsets.UTF_8)
         .replace("Version8_3_10", "Version8_3_6"),
       StandardCharsets.UTF_8);
 
-    Path testFile = Paths.get("./src/test/resources/diagnostics/TimeoutsInExternalResourcesDiagnostic836.bsl").toAbsolutePath();
+    Path testFile = Path.of("./src/test/resources/diagnostics/TimeoutsInExternalResourcesDiagnostic836.bsl").toAbsolutePath();
     initServerContext(tempDir.toAbsolutePath());
     DocumentContext newDocumentContext = TestUtils.getDocumentContext(
       testFile.toUri(),
@@ -177,12 +176,12 @@ class TimeoutsInExternalResourcesDiagnosticTest extends AbstractDiagnosticTest<T
 
     // when
     FileUtils.writeStringToFile(
-      Paths.get(tempDir.toAbsolutePath().toString(), "Configuration.xml").toFile(),
+      Path.of(tempDir.toAbsolutePath().toString(), "Configuration.xml").toFile(),
       FileUtils.readFileToString(CONFIGURATION_FILE_PATH, StandardCharsets.UTF_8)
         .replace("Version8_3_10", "Version8_3_7"),
       StandardCharsets.UTF_8);
 
-    Path testFile = Paths.get("./src/test/resources/diagnostics/TimeoutsInExternalResourcesDiagnostic837.bsl").toAbsolutePath();
+    Path testFile = Path.of("./src/test/resources/diagnostics/TimeoutsInExternalResourcesDiagnostic837.bsl").toAbsolutePath();
     initServerContext(tempDir.toAbsolutePath());
     DocumentContext newDocumentContext = TestUtils.getDocumentContext(
       testFile.toUri(),
