@@ -33,7 +33,6 @@ import org.junit.jupiter.api.Test;
 
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -112,7 +111,7 @@ class UnusedLocalMethodDiagnosticTest extends AbstractDiagnosticTest<UnusedLocal
   }
 
   private void getObjectModuleDocumentContext() {
-    Path testFile = Paths.get(PATH_TO_MODULE_CONTENT).toAbsolutePath();
+    Path testFile = Path.of(PATH_TO_MODULE_CONTENT).toAbsolutePath();
     getDocumentContextFromFile(testFile);
     when(documentContext.getModuleType()).thenReturn(ModuleType.ObjectModule);
     when(documentContext.getMdObject()).thenReturn(Optional.of(module));
@@ -122,7 +121,7 @@ class UnusedLocalMethodDiagnosticTest extends AbstractDiagnosticTest<UnusedLocal
   void getDocumentContextFromFile(Path testFile) {
 
     Path path = Absolute.path(PATH_TO_METADATA);
-    Path moduleFile = Paths.get(PATH_TO_MODULE_FILE).toAbsolutePath();
+    Path moduleFile = Path.of(PATH_TO_MODULE_FILE).toAbsolutePath();
 
     initServerContext(path);
     var configuration = context.getConfiguration();
